# Mental-Wellness-by-Voice-Agent-NLM-

./: .env.example  .gitignore  README.md  TRAINING_GUIDE.md  setup.sh
backend/: config.py  main.py  requirements.txt
backend/routers/: ws_router.py
backend/services/: emotion_service.py  engine_bridge.py  llm_service.py  pipeline_service.py  safety_service.py  stt_service.py  tts_service.py  vad_service.py
config/: pipeline.yaml  safety_responses.yaml
engine/: CMakeLists.txt
engine/include/: emotion.hpp  llm.hpp  mood_tracker.hpp  pipeline.hpp  stt.hpp  vad.hpp
engine/src/: emotion.cpp  llm.cpp  main.cpp  mood_tracker.cpp  pipeline.cpp  stt.cpp  vad.cpp
frontend/: next.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConversationLog.tsx  LatencyBar.tsx  MoodRing.tsx  SafetyBanner.tsx  VoiceOrb.tsx
frontend/hooks/: useAudioCapture.ts  useWebSocket.ts
frontend/lib/: audioWorklet.ts  constants.ts
scripts/: benchmark.py  build_engine.sh  download_models.sh  fix_llm.py
training/: requirements.txt
